--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,11 @@ add_subdirectory(extlibs)
 add_subdirectory(lib)
 add_subdirectory(cli_app)
 add_subdirectory(cli_app_cpp)
-#add_subdirectory(guiapp)
 add_subdirectory(mecab_data)
 
+include_external_msproject(SakuinKun ${CMAKE_CURRENT_SOURCE_DIR}/guiapp_csharp/SakuinKun.csproj)
+add_dependencies(libsakuin extlib mecab_data)
+add_dependencies(SakuinKun libsakuin)
+add_dependencies(sakuin-cli-cpp libsakuin)
+add_dependencies(sakuin-cli libsakuin)
 include(Install.cmake)
